<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="lingqian">零钱</string>
    <string name="go_make_money">去赚钱</string>
    <string name="add_your_tag">添加你的标签</string>
    <string name="add_your_tag_des">系统将为你推荐更适合的人</string>
    <string name="little_magpie">小喜鹊</string>
    <string name="your_appeal_is_low">你当前的吸引力偏低哦！</string>
    <string name="lift_now">立即提升</string>
    <string name="complete_your_info">展示你的魅力</string>
    <string name="complete_info">完善资料</string>
    <string name="complete_your_info_des">每上传1张照片，被人喜欢的几率提升20%</string>
    <string name="upload_photo">上传照片</string>

    <string name="other_recharge_hint">请输入欢鹊ID号，不支持靓号</string>
    <string name="que_bi_total">鹊币总额</string>
    <string name="recharge_help">充值获得的鹊币显示为充值鹊币，其余方式获得的鹊币显示为赠送鹊币，使用鹊币时优先扣除赠送鹊币。</string>
    <string name="withdraw_tips">1. 提现方式需要通过实名认证，否则无法提现。\n2. 除新人专享，其余的提现均收取1%手续费。\n3. 新人专享1元秒到账，每人仅有1次机会。
        \n4. 20元提现秒到账，每日仅限提现1次。\n5. 50元、100元、300元、500元每周仅限提现1次。</string>
    <string name="balance_not_enough">余额不足</string>
    <string name="mystery_count_down">神秘人使用倒计时</string>

    <!--PK道具说明-->
    <string name="pk_prop_address">/rules/pkyhPropRules.html</string>
    <!--pk玩法优化相关-->
    <string name="pk_props_award_fail">未获得奖励积分</string>
    <string name="pk_gift_task_success">礼物任务(成功)</string>
    <string name="pk_gift_task__fail">礼物任务(失败)</string>
    <string name="pk_score_task_success">PK积分任务(成功)</string>
    <string name="pk_score_task__fail">PK积分任务(失败)</string>

    <string name="attention_switch_pk">PK只能在竖屏模式进行哦～</string>
    <string name="attention_switch_connect">连麦只能在竖屏模式进行哦～</string>

    <string name="pk_props_grab_success">道具争夺(胜利)</string>
    <string name="pk_props_grab_fail">道具争夺(失败)</string>

    <string name="pk_props_grab_none">无人抢到道具</string>

    <string name="guide_to_send">别光看，一起来聊聊呀~</string>
    <string name="today_fate_girl_title">今日份女友</string>
    <string name="today_fate_girl_title2">快去宠幸你的女友吧</string>

    <string name="share_card_tips_01">长按扫码了解更多TA的信息</string>
</resources>