<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF7EE">

    <TextView
        android:id="@+id/tv_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_15"
        android:includeFontPadding="false"
        android:text="@string/add_your_tag"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_8"
        android:includeFontPadding="false"
        android:text="@string/add_your_tag_des"
        android:textColor="@color/black_666"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title1" />

    <ImageView
        android:id="@+id/iv_guide_tag_close"
        android:layout_width="@dimen/dimen_24"
        android:layout_height="@dimen/dimen_24"
        android:layout_margin="@dimen/dimen_10"
        android:src="@mipmap/icon_close_black_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginTop="@dimen/dimen_7"
        android:layout_marginRight="@dimen/dimen_15"
        android:layout_marginBottom="@dimen/dimen_20"
        android:background="@drawable/bg_shape_white1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title2">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30"
            android:layout_margin="@dimen/dimen_10"
            android:src="@mipmap/icon_logo_avatar_yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginTop="2dp"
            android:includeFontPadding="false"
            android:text="@string/little_magpie"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
            app:layout_constraintStart_toEndOf="@+id/iv_logo"
            app:layout_constraintTop_toTopOf="@+id/iv_logo" />

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/your_appeal_is_low"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <TextView
            android:id="@+id/tv_btn_lift"
            android:layout_width="@dimen/dimen_160"
            android:layout_height="@dimen/dimen_34"
            android:layout_marginTop="@dimen/dimen_15"
            android:layout_marginBottom="@dimen/dimen_15"
            android:background="@drawable/bg_solid_btn2"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/lift_now"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
